2010-08-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Improved the function print_status_image
	to allow an additional parameter for send it image options like
	style, width...

2010-08-12  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_alerts.php,
	  godmode/alerts/configure_alert_template.php: Added support for
	  unknown status alerts.

	* pandoradb.sql, godmode/menu.php,
	  extras/pandoradb_migrate_v3.1_to_v3.2.sql: Added support for SNMP
	  filters.

	* godmode/snmpconsole/snmp_filters.php: Added to repository. SNMP
	  filter editor.

	* operation/snmpconsole/snmp_view.php: Fixed header placement.

2010-08-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Added the function html2rgb for
	convert a color string from format #FFFFFF to RGB values

2010-08-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/massive_operations.php: Added the massive operation
	to add snmp modules to an agent

2010-08-11  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor.php: Changed the old way of
	get a snmpwalk to use the new function get_snmpwalk

2010-08-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Changed the newst function added name

2010-08-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Added a function to call snmpwalk
	functions setting the version, ip address, community...

2010-08-11  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_network_map.php,
	include/help/ja/help_autocreate_blacklist.php: Added new help files
	in Japanese.

2010-08-10  Miguel de Dios  <miguel.dedios@artica.es>
	* ajax.php: cleaned source code.
	
	* godmode/agentes/massive_operations.php: cleaned source code, and added
	hook to enterprise massive operations tab.
	
2010-08-10  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	extras/pandoradb_migrate_v3.1_to_v3.2.sql: Fixed the creation of